--- a/BaC_Code/index.html
+++ b/BaC_Code/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BaC - Betterward as Collaborators</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="BaC_Code/style.css">
 </head>
 <body>
     <h1>Welcome to BaC</h1>
@@ -29,6 +29,6 @@
         </form>
     </section>
 
-    <script src="app.js"></script>
+    <script src="BaC_Code/app.js"></script>
 </body>
 </html>
